[project]
name = "ncc"
description = "Simple NETCONF client app using ncclient and netmiko"
authors = [
    { name = "Einar Nilsen-Nygaard <einarnn@gmail.com>" }
]
license = "Apache License, Version 2.0"
dynamic = ["version"]

[tool.poetry]
packages = [
    { include = "scripts", from = "src" },
    { include = "nccutil", from = "src" },
    { include = "ncc", from = "src" },
]
version = "0.0.0"

[tool.poetry-dynamic-versioning]
enable = true
pattern = "^v(?P<base>\\d+\\.\\d+\\.\\d+)$"

[project.scripts]
ncc = "scripts.ncc:main"
ncc-capture-schema = "scripts.ncc_capture_schema:main"
ncc-get-all-schema = "scripts.ncc_get_all_schema:main"
ncc-get-schema = "scripts.ncc_get_schema:main"
ncc-yang-push = "scripts.ncc_yang_push:main"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.dependencies]
python = ">= 3.11,<4.0"
beautifulsoup4 = "^4.13.3,<5.0"
gitpython = "^3.1.44,<4.0"
jinja2 = "^3.1.5,<4.0"
markupsafe = "^3.0.2,<4.0"
ncclient = ">= 0.7.0, <0.8.0"
netmiko = "^4.5.0,<5.0"
pyang = "^2.6.1,<3.0"
requests = "^2.32.3,<3.0"
urllib3 = "^2.3.0,<3.0"
ssh-python = ">= 1.1.1, <2.0.0"
